@@ -91,6 +91,11 @@ in the {+driver-short+} source code on GitHub.
      Learn more in the :ref:`golang-timeout-setting` section of the
      Connection Options guide.
 
+   - Removal of the ``bson/primitive`` package. This package is now merged with
+     the ``bson`` package. To update your code, remove any ``bson/primitive``
+     import statements and change any instance of ``primitive.ObjectID`` to
+     ``bson.ObjectId``.
+
 This release includes the following improvements and fixes:
 
 - Support for OpenID Connect (OIDC) authentication. To learn more, see
